<resources>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="email_hint">Type your email address here</string>
    <string name="password_hint">A strong password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Create Account</string>
    <string name="create_account">Crate Account</string>
    <string name="go_back">Back To Login</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="marvel_comics">Marvel Comics</string>
    <string name="go_back_to_login_page_arrow">Go back to login page arrow</string>
</resources>